homeworks/nickdikiy/module-03/lesson-08/traefik.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
    name: traefik
    annotations:
        ingressclass.kubernetes.io/is-default-class: "true"
spec:
    controller: traefik.io/ingress-controller

---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: traefik
    namespace: kube-system
spec:
    replicas: 1
    selector:
        matchLabels:
            app: traefik
    template:
        metadata:
            labels:
                app: traefik
        spec:
            serviceAccountName: traefik-ingress-controller
            hostNetwork: true
            containers:
                -   name: traefik
                    image: traefik:v3.5
                    args:
                        - "--api.insecure=true"
                        - "--providers.kubernetesingress=true"
                        - "--entrypoints.web.address=:80"
                        - "--entrypoints.websecure.address=:443"
                    ports:
                        -   name: web
                            containerPort: 80
                        -   name: websecure
                            containerPort: 443
